<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Activity Lab</string>
    <string name="menu_settings">Settings</string>
    <string name="onCreate">onCreate() calls:</string>
    <string name="onStart">onStart() calls:</string>
    <string name="onResume">onResume() calls:</string>
    <string name="onPause">onPause() calls:</string>
    <string name="onStop">onStop() calls:</string>
    <string name="onDestroy">onDestroy() calls:</string>
    <string name="onRestart">onRestart() calls:</string>
    <string name="button">Start Activity Two</string>
    <string name="title_activity_activity_two">Activity Two</string>
    <string name="welcome">Welcome to Activity Two</string>
    <string name="close">Close Activity</string>
	<string name="m_1">Sample Menu Item</string>
    <string name="m_2">Sample Menu Item 2</string>
    <string name="clearCounter">Clear counter data</string>

</resources>